Criação do service, controller, dtos e entity, conclusão do backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=cardapio-digital
+# URL do banco de dados PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/cardapio_online
+
+# Usuário e senha do banco de dados
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+# Driver JDBC
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Dialeto do Hibernate para PostgreSQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Geração do schema (pode ser alterado para "update", "create", "none")
+spring.jpa.hibernate.ddl-auto=update
+
+# Exibir SQL gerado pelo Hibernate
+spring.jpa.show-sql=true
